# vibe-trading-modified

./: .env.example  .gitignore  README.md  api_server.py  launch.bat  mcp_server.py  pyproject.toml  requirements.txt
backtest/: benchmark.py  correlation.py  metrics.py  models.py  run_card.py  runner.py  validation.py
backtest/engines/: __init__.py  _market_hooks.py  base.py  china_a.py  composite.py
backtest/loaders/: _http.py  akshare_loader.py  baostock_loader.py  base.py  eastmoney_client.py  eastmoney_loader.py  local_loader.py  mootdx_loader.py  registry.py  tencent_loader.py  tushare_fundamentals.py
backtest/optimizers/: __init__.py  base.py  equal_volatility.py  max_diversification.py  mean_variance.py  risk_parity.py
cli/: __init__.py  __main__.py  _legacy.py  _version.py  completer.py  input.py  intro.py  main.py  onboard.py  stream.py  theme.py
cli/commands/: __init__.py  chat.py  goal.py  help.py  memory.py  session.py  show.py  slash_router.py
cli/components/: __init__.py  chat_log.py  hint_bar.py  tool_event.py  working_indicator.py
cli/ui/: __init__.py  banner.py  rail.py  transcript.py
cli/utils/: __init__.py  format.py  thinking_verbs.py
src/: __init__.py  market_data.py  preflight.py  ui_services.py
src/agent/: __init__.py  context.py  frontmatter.py  loop.py  memory.py  progress.py  skills.py  tools.py  trace.py
src/api/: __init__.py  alpha_routes.py
src/config/: __init__.py  loader.py  paths.py  schema.py
src/core/: __init__.py  runner.py  state.py
src/factors/: __init__.py  base.py  bench_runner.py  bench_runner_strict.py  cli_handlers.py  compare_runner.py  factor_analysis_core.py  registry.py
src/goal/: __init__.py  context.py  models.py  policy.py  store.py
src/hypotheses/: __init__.py  cli_handlers.py  registry.py
src/live/: __init__.py  audit.py  classification.py  daily_count.py  enforcement.py  halt.py  order_guard.py  paths.py  registry.py  sdk_order_gate.py
src/memory/: __init__.py  persistent.py
src/providers/: __init__.py  capabilities.py  chat.py  llm.py  llm_providers.json  openai_codex.py
src/security/: __init__.py  (+1 more)
(+657 files in other folders)
